[gd_scene load_steps=37 format=3 uid="uid://xemaon1gbp2k"]

[ext_resource type="Script" uid="uid://7prqlslf7eh3" path="res://scripts/scenes/test_scene.gd" id="1_i0mht"]
[ext_resource type="PackedScene" uid="uid://csh1iurc1b413" path="res://resources/ui/health_bar.tscn" id="2_g3ou2"]
[ext_resource type="Script" uid="uid://dtkyery6j0e0c" path="res://scripts/ui/hold_button.gd" id="3_dpdlj"]
[ext_resource type="Script" path="res://scripts/navigation/nav_map.gd" id="4_1ldar"]
[ext_resource type="Script" path="res://scripts/navigation/nav_connection.gd" id="5_rstiy"]
[ext_resource type="Script" uid="uid://b1muqje3faxmt" path="res://scripts/navigation/nav_destination.gd" id="6_axfb2"]
[ext_resource type="Script" uid="uid://c85cudw6o5wbo" path="res://scripts/trigger/textbox_trigger.gd" id="7_itm1g"]
[ext_resource type="Script" path="res://scripts/navigation/nav_pawn.gd" id="8_81qr1"]
[ext_resource type="Script" path="res://scripts/trigger/triggers.gd" id="8_je848"]
[ext_resource type="Script" uid="uid://bkprsow3a3mlf" path="res://scripts/misc/_test/test_dest_toggle_button.gd" id="9_qduwm"]
[ext_resource type="Script" uid="uid://bou1ppa6mrns7" path="res://scripts/trigger/change_scene_trigger.gd" id="10_ftxq5"]
[ext_resource type="Script" path="res://scripts/navigation/nav_controller.gd" id="11_f7p0w"]
[ext_resource type="Theme" uid="uid://q5rrux06ucou" path="res://theme/test.theme" id="11_pw38d"]
[ext_resource type="Script" uid="uid://bydthy3o682u6" path="res://scripts/misc/_test/test_spawn_textbox.gd" id="12_c7u7o"]
[ext_resource type="Script" uid="uid://1kmr1183njlk" path="res://scripts/misc/_test/test_save_load_button.gd" id="12_k2pe3"]
[ext_resource type="Script" uid="uid://ch1piyk1del1k" path="res://scripts/ui/multibutton.gd" id="13_n2e41"]
[ext_resource type="Script" uid="uid://d02ri3ryw8poa" path="res://scripts/ui/multibutton_pair.gd" id="14_he6h3"]
[ext_resource type="Script" uid="uid://bhpk8x6ovggua" path="res://scripts/misc/_test/test_multibutton_label.gd" id="15_tyds6"]
[ext_resource type="Script" uid="uid://cyys85hikqdpi" path="res://scripts/misc/_test/test_spawn_damage_indicator.gd" id="16_ujy37"]
[ext_resource type="Script" path="res://scripts/extensions/visible_collision_shape_2d.gd" id="18_f7p0w"]
[ext_resource type="Script" uid="uid://th4l6u2tjopq" path="res://scripts/misc/_test/test_visible_collision_shape.gd" id="19_je848"]

[sub_resource type="Resource" id="Resource_a2occ"]
script = ExtResource("5_rstiy")
a = NodePath("B")
b = NodePath("A")
bidirectional = false

[sub_resource type="Resource" id="Resource_dk35o"]
script = ExtResource("5_rstiy")
a = NodePath("B")
b = NodePath("C")
bidirectional = false

[sub_resource type="Resource" id="Resource_fytkp"]
script = ExtResource("5_rstiy")
a = NodePath("A")
b = NodePath("C")
bidirectional = false

[sub_resource type="Resource" id="Resource_ffsvi"]
script = ExtResource("5_rstiy")
a = NodePath("C")
b = NodePath("D")

[sub_resource type="Resource" id="Resource_bwq7t"]
script = ExtResource("5_rstiy")
a = NodePath("D")
b = NodePath("B")

[sub_resource type="Resource" id="Resource_tbbxx"]
script = ExtResource("5_rstiy")
a = NodePath("C")
b = NodePath("Combat")

[sub_resource type="CircleShape2D" id="CircleShape2D_xqrps"]
radius = 25.0

[sub_resource type="Gradient" id="Gradient_eg0cy"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_v3qjp"]
gradient = SubResource("Gradient_eg0cy")
width = 20

[sub_resource type="Curve2D" id="Curve2D_7lvpt"]

[sub_resource type="Resource" id="Resource_obqjk"]
script = ExtResource("14_he6h3")
type = 1
button = NodePath("VBoxContainer/HBoxContainer/Positive")

[sub_resource type="Resource" id="Resource_0tg3u"]
script = ExtResource("14_he6h3")
type = 3
button = NodePath("VBoxContainer/HBoxContainer/Cancel")

[sub_resource type="Resource" id="Resource_rlxuh"]
script = ExtResource("14_he6h3")
type = 105
button = NodePath("VBoxContainer/HBoxContainer/Choice 5")

[sub_resource type="CircleShape2D" id="CircleShape2D_ftxq5"]
radius = 47.010635

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7p0w"]
size = Vector2(116, 62)

[node name="Test Scene" type="Node2D"]
script = ExtResource("1_i0mht")

[node name="Health" type="Node" parent="."]

[node name="Health Bar" parent="Health" instance=ExtResource("2_g3ou2")]
offset_left = 20.0
offset_top = 20.0
offset_right = 170.0
offset_bottom = 50.0

[node name="Health Bar Up" type="Button" parent="Health"]
offset_left = 180.0
offset_top = 20.0
offset_right = 210.0
offset_bottom = 51.0
text = "▲"
script = ExtResource("3_dpdlj")

[node name="Health Bar Down" type="Button" parent="Health"]
offset_left = 220.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 51.0
text = "▼"
script = ExtResource("3_dpdlj")

[node name="Navigation" type="Node" parent="."]

[node name="NavController" type="Node2D" parent="Navigation" node_paths=PackedStringArray("map", "pawn")]
script = ExtResource("11_f7p0w")
map = NodePath("../NavMap")
pawn = NodePath("../NavPawn")
metadata/_custom_type_script = "uid://b7ia4bhq41usw"

[node name="NavMap" type="Node2D" parent="Navigation"]
script = ExtResource("4_1ldar")
connections = Array[ExtResource("5_rstiy")]([SubResource("Resource_a2occ"), SubResource("Resource_dk35o"), SubResource("Resource_fytkp"), SubResource("Resource_ffsvi"), SubResource("Resource_bwq7t"), SubResource("Resource_tbbxx")])
draw_connections = 0
metadata/_custom_type_script = "uid://cmrui5v5lwprx"

[node name="A" type="Area2D" parent="Navigation/NavMap" node_paths=PackedStringArray("collision", "triggers")]
position = Vector2(62, 98)
script = ExtResource("6_axfb2")
collision = NodePath("Collision")
triggers = NodePath("Triggers")
metadata/_custom_type_script = "uid://b1muqje3faxmt"

[node name="Collision" type="CollisionShape2D" parent="Navigation/NavMap/A"]
shape = SubResource("CircleShape2D_xqrps")
metadata/_edit_lock_ = true

[node name="Triggers" type="Node" parent="Navigation/NavMap/A"]
script = ExtResource("8_je848")
metadata/_custom_type_script = "uid://cedp21hrhru6h"

[node name="TextboxTrigger" type="Node" parent="Navigation/NavMap/A/Triggers"]
script = ExtResource("7_itm1g")
text = "Reached A"
metadata/_custom_type_script = "uid://c85cudw6o5wbo"

[node name="B" type="Area2D" parent="Navigation/NavMap" node_paths=PackedStringArray("collision", "triggers")]
position = Vector2(250, 100)
script = ExtResource("6_axfb2")
collision = NodePath("Collision")
triggers = NodePath("Triggers")
metadata/_custom_type_script = "uid://b1muqje3faxmt"

[node name="Collision" type="CollisionShape2D" parent="Navigation/NavMap/B"]
shape = SubResource("CircleShape2D_xqrps")
metadata/_edit_lock_ = true

[node name="Triggers" type="Node" parent="Navigation/NavMap/B"]
script = ExtResource("8_je848")
metadata/_custom_type_script = "uid://cedp21hrhru6h"

[node name="TextboxTrigger" type="Node" parent="Navigation/NavMap/B/Triggers"]
script = ExtResource("7_itm1g")
text = "Reached B"
metadata/_custom_type_script = "uid://c85cudw6o5wbo"

[node name="C" type="Area2D" parent="Navigation/NavMap" node_paths=PackedStringArray("collision", "triggers")]
position = Vector2(150, 200)
script = ExtResource("6_axfb2")
collision = NodePath("Collision")
triggers = NodePath("Triggers")
metadata/_custom_type_script = "uid://b1muqje3faxmt"

[node name="Collision" type="CollisionShape2D" parent="Navigation/NavMap/C"]
shape = SubResource("CircleShape2D_xqrps")
metadata/_edit_lock_ = true

[node name="Triggers" type="Node" parent="Navigation/NavMap/C"]
script = ExtResource("8_je848")
metadata/_custom_type_script = "uid://cedp21hrhru6h"

[node name="TextboxTrigger" type="Node" parent="Navigation/NavMap/C/Triggers"]
script = ExtResource("7_itm1g")
text = "Reached C"
metadata/_custom_type_script = "uid://c85cudw6o5wbo"

[node name="D" type="Area2D" parent="Navigation/NavMap" node_paths=PackedStringArray("collision", "triggers")]
position = Vector2(291, 200)
script = ExtResource("6_axfb2")
selectable = false
collision = NodePath("Collision")
triggers = NodePath("Triggers")
metadata/_custom_type_script = "uid://b1muqje3faxmt"

[node name="Collision" type="CollisionShape2D" parent="Navigation/NavMap/D"]
shape = SubResource("CircleShape2D_xqrps")
debug_color = Color(0.701961, 0, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="Triggers" type="Node" parent="Navigation/NavMap/D"]
script = ExtResource("8_je848")
metadata/_custom_type_script = "uid://cedp21hrhru6h"

[node name="TextboxTrigger" type="Node" parent="Navigation/NavMap/D/Triggers"]
script = ExtResource("7_itm1g")
text = "Reached D"
metadata/_custom_type_script = "uid://c85cudw6o5wbo"

[node name="Combat" type="Area2D" parent="Navigation/NavMap" node_paths=PackedStringArray("collision", "triggers")]
position = Vector2(50, 328)
script = ExtResource("6_axfb2")
collision = NodePath("Collision")
triggers = NodePath("Triggers")
metadata/_custom_type_script = "uid://b1muqje3faxmt"

[node name="Collision" type="CollisionShape2D" parent="Navigation/NavMap/Combat"]
shape = SubResource("CircleShape2D_xqrps")
debug_color = Color(0, 0.6, 0.701961, 0.419608)
metadata/_edit_lock_ = true

[node name="Triggers" type="Node" parent="Navigation/NavMap/Combat"]
script = ExtResource("8_je848")
metadata/_custom_type_script = "uid://cedp21hrhru6h"

[node name="ChangeSceneTrigger" type="Node" parent="Navigation/NavMap/Combat/Triggers"]
script = ExtResource("10_ftxq5")
metadata/_custom_type_script = "uid://bou1ppa6mrns7"

[node name="NavPawn" type="Node2D" parent="Navigation"]
position = Vector2(152, 141)
script = ExtResource("8_81qr1")
metadata/_custom_type_script = "uid://1i5h8epl1i1s"

[node name="Sprite2D" type="Sprite2D" parent="Navigation/NavPawn"]
scale = Vector2(1, 20)
texture = SubResource("GradientTexture1D_v3qjp")
metadata/_edit_lock_ = true

[node name="Path" type="Path2D" parent="Navigation/NavPawn"]
curve = SubResource("Curve2D_7lvpt")
metadata/_edit_lock_ = true

[node name="Follow" type="PathFollow2D" parent="Navigation/NavPawn/Path"]
loop = false
metadata/_edit_lock_ = true

[node name="Dest Select Toggle" type="Button" parent="Navigation" node_paths=PackedStringArray("destination")]
offset_left = 86.0
offset_top = 179.0
offset_right = 116.0
offset_bottom = 210.0
toggle_mode = true
button_pressed = true
text = "X"
script = ExtResource("9_qduwm")
destination = NodePath("../NavMap/C")

[node name="Combat Label" type="Label" parent="Navigation"]
offset_left = 88.0
offset_top = 317.0
offset_right = 245.0
offset_bottom = 344.0
theme = ExtResource("11_pw38d")
text = "Go to Combat Arena"

[node name="Saving_Loading" type="Node" parent="."]

[node name="Save Data" type="TextEdit" parent="Saving_Loading"]
offset_left = 400.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 220.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 32
placeholder_text = "[type here]"
wrap_mode = 1
autowrap_mode = 1

[node name="SlotGroup 0" type="Node" parent="Saving_Loading"]

[node name="Label 0" type="Label" parent="Saving_Loading/SlotGroup 0"]
offset_left = 620.0
offset_top = 20.0
offset_right = 680.0
offset_bottom = 80.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 32
text = "NO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="S" type="Button" parent="Saving_Loading/SlotGroup 0" node_paths=PackedStringArray("textbox", "label")]
offset_left = 700.0
offset_top = 20.0
offset_right = 760.0
offset_bottom = 80.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 25
text = "S"
script = ExtResource("12_k2pe3")
textbox = NodePath("../../Save Data")
label = NodePath("../Label 0")

[node name="L" type="Button" parent="Saving_Loading/SlotGroup 0" node_paths=PackedStringArray("textbox", "label")]
offset_left = 780.0
offset_top = 20.0
offset_right = 840.0
offset_bottom = 80.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 25
text = "L"
script = ExtResource("12_k2pe3")
textbox = NodePath("../../Save Data")
label = NodePath("../Label 0")
mode = 1

[node name="E" type="Button" parent="Saving_Loading/SlotGroup 0" node_paths=PackedStringArray("textbox", "label")]
offset_left = 860.0
offset_top = 20.0
offset_right = 920.0
offset_bottom = 80.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 25
text = "E"
script = ExtResource("12_k2pe3")
textbox = NodePath("../../Save Data")
label = NodePath("../Label 0")
mode = 2

[node name="SlotGroup 1" type="Node" parent="Saving_Loading"]

[node name="Label 1" type="Label" parent="Saving_Loading/SlotGroup 1"]
offset_left = 620.0
offset_top = 95.0
offset_right = 680.0
offset_bottom = 155.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 32
text = "NO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="S" type="Button" parent="Saving_Loading/SlotGroup 1" node_paths=PackedStringArray("textbox", "label")]
offset_left = 700.0
offset_top = 95.0
offset_right = 760.0
offset_bottom = 155.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 25
text = "S"
script = ExtResource("12_k2pe3")
textbox = NodePath("../../Save Data")
label = NodePath("../Label 1")
slot = 1

[node name="L" type="Button" parent="Saving_Loading/SlotGroup 1" node_paths=PackedStringArray("textbox", "label")]
offset_left = 780.0
offset_top = 95.0
offset_right = 840.0
offset_bottom = 155.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 25
text = "L"
script = ExtResource("12_k2pe3")
textbox = NodePath("../../Save Data")
label = NodePath("../Label 1")
slot = 1
mode = 1

[node name="E" type="Button" parent="Saving_Loading/SlotGroup 1" node_paths=PackedStringArray("textbox", "label")]
offset_left = 860.0
offset_top = 95.0
offset_right = 920.0
offset_bottom = 155.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 25
text = "E"
script = ExtResource("12_k2pe3")
textbox = NodePath("../../Save Data")
label = NodePath("../Label 1")
slot = 1
mode = 2

[node name="SlotGroup 2" type="Node" parent="Saving_Loading"]

[node name="Label 2" type="Label" parent="Saving_Loading/SlotGroup 2"]
offset_left = 620.0
offset_top = 170.0
offset_right = 680.0
offset_bottom = 230.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 32
text = "NO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="S" type="Button" parent="Saving_Loading/SlotGroup 2" node_paths=PackedStringArray("textbox", "label")]
offset_left = 700.0
offset_top = 170.0
offset_right = 760.0
offset_bottom = 230.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 25
text = "S"
script = ExtResource("12_k2pe3")
textbox = NodePath("../../Save Data")
label = NodePath("../Label 2")
slot = 2

[node name="L" type="Button" parent="Saving_Loading/SlotGroup 2" node_paths=PackedStringArray("textbox", "label")]
offset_left = 780.0
offset_top = 170.0
offset_right = 840.0
offset_bottom = 230.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 25
text = "L"
script = ExtResource("12_k2pe3")
textbox = NodePath("../../Save Data")
label = NodePath("../Label 2")
slot = 2
mode = 1

[node name="E" type="Button" parent="Saving_Loading/SlotGroup 2" node_paths=PackedStringArray("textbox", "label")]
offset_left = 860.0
offset_top = 170.0
offset_right = 920.0
offset_bottom = 230.0
theme = ExtResource("11_pw38d")
theme_override_font_sizes/font_size = 25
text = "E"
script = ExtResource("12_k2pe3")
textbox = NodePath("../../Save Data")
label = NodePath("../Label 2")
slot = 2
mode = 2

[node name="Textbox" type="Node" parent="."]

[node name="Normal" type="Button" parent="Textbox"]
offset_left = 20.0
offset_top = 400.0
offset_right = 120.0
offset_bottom = 500.0
theme = ExtResource("11_pw38d")
text = "Spawn 
Normal 
Textbox"
clip_text = true
script = ExtResource("12_c7u7o")
timeout = 3.0

[node name="Long" type="Button" parent="Textbox"]
offset_left = 130.0
offset_top = 400.0
offset_right = 230.0
offset_bottom = 500.0
theme = ExtResource("11_pw38d")
text = "Spawn 
Long Timer 
Textbox"
clip_text = true
script = ExtResource("12_c7u7o")
timeout = 5.0

[node name="Infinite" type="Button" parent="Textbox"]
offset_left = 240.0
offset_top = 400.0
offset_right = 340.0
offset_bottom = 500.0
theme = ExtResource("11_pw38d")
text = "Spawn 
Infinite
Textbox"
clip_text = true
script = ExtResource("12_c7u7o")
timeout = inf

[node name="No Cancel" type="Button" parent="Textbox"]
offset_left = 350.0
offset_top = 400.0
offset_right = 450.0
offset_bottom = 500.0
theme = ExtResource("11_pw38d")
text = "Spawn 
No Cancel
Textbox"
clip_text = true
script = ExtResource("12_c7u7o")
timeout = 2.0
cancellable = false

[node name="MultiButton" type="Node" parent="."]

[node name="MultiButton" type="Control" parent="MultiButton"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("13_n2e41")
pairs = Array[ExtResource("14_he6h3")]([SubResource("Resource_obqjk"), SubResource("Resource_0tg3u"), SubResource("Resource_rlxuh")])

[node name="VBoxContainer" type="VBoxContainer" parent="MultiButton/MultiButton"]
layout_mode = 0
offset_left = 950.0
offset_top = 20.0
offset_right = 1250.0
offset_bottom = 150.0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MultiButton/MultiButton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Positive" type="Button" parent="MultiButton/MultiButton/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Positive"

[node name="Cancel" type="Button" parent="MultiButton/MultiButton/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Choice 5" type="Button" parent="MultiButton/MultiButton/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Choice 5"

[node name="Label" type="Label" parent="MultiButton/MultiButton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("11_pw38d")
text = "Which button was pressed?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pressed Button" type="Label" parent="MultiButton/MultiButton/VBoxContainer" node_paths=PackedStringArray("multi_button")]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("11_pw38d")
text = "???"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("15_tyds6")
multi_button = NodePath("../..")

[node name="Damage Indicator" type="Node" parent="."]

[node name="Normal Damage" type="Button" parent="Damage Indicator"]
offset_left = 923.0
offset_top = 367.0
offset_right = 1023.0
offset_bottom = 427.0
theme = ExtResource("11_pw38d")
text = "Normal
Damage"
clip_text = true
script = ExtResource("16_ujy37")

[node name="Red Damage" type="Button" parent="Damage Indicator"]
offset_left = 1046.0
offset_top = 367.0
offset_right = 1146.0
offset_bottom = 427.0
theme = ExtResource("11_pw38d")
text = "Red Damage"
clip_text = true
script = ExtResource("16_ujy37")
damage = -39
color = Color(1, 0, 0, 1)

[node name="Random Damage" type="Button" parent="Damage Indicator"]
offset_left = 1165.0
offset_top = 367.0
offset_right = 1265.0
offset_bottom = 427.0
theme = ExtResource("11_pw38d")
text = "Random 
Damage"
clip_text = true
script = ExtResource("16_ujy37")
random = true

[node name="Visible Collision Shape" type="Node" parent="."]

[node name="Circle" type="Area2D" parent="Visible Collision Shape"]

[node name="VisibleCollisionShape2D" type="CollisionShape2D" parent="Visible Collision Shape/Circle"]
position = Vector2(554, 382)
shape = SubResource("CircleShape2D_ftxq5")
script = ExtResource("18_f7p0w")
color = Color(0.2275, 0.65, 0.33312503, 1)
disabled_color = Color(0.66, 0.2244, 0.2244, 1)
metadata/_custom_type_script = "uid://22vtdegk8hes"

[node name="Circle Enable" type="Button" parent="Visible Collision Shape" node_paths=PackedStringArray("visible_collision_shape_2d")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = 78.0
offset_right = -16.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
text = "Enable / Disable
"
script = ExtResource("19_je848")
visible_collision_shape_2d = NodePath("../Circle/VisibleCollisionShape2D")

[node name="Square" type="Area2D" parent="Visible Collision Shape"]
position = Vector2(137, 0)

[node name="VisibleCollisionShape2D" type="CollisionShape2D" parent="Visible Collision Shape/Square"]
position = Vector2(554, 382)
shape = SubResource("RectangleShape2D_f7p0w")
script = ExtResource("18_f7p0w")
color = Color(0.2275, 0.65, 0.33312503, 1)
disabled_color = Color(0.66, 0.2244, 0.2244, 1)
border = false
metadata/_custom_type_script = "uid://22vtdegk8hes"

[node name="Square Enable" type="Button" parent="Visible Collision Shape" node_paths=PackedStringArray("visible_collision_shape_2d")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = 78.0
offset_right = 121.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
text = "Enable / Disable
"
script = ExtResource("19_je848")
visible_collision_shape_2d = NodePath("../Square/VisibleCollisionShape2D")

[connection signal="button_held" from="Health/Health Bar Up" to="Health/Health Bar" method="change_value" binds= [1]]
[connection signal="button_held" from="Health/Health Bar Down" to="Health/Health Bar" method="change_value" binds= [-1]]
[connection signal="selected" from="Navigation/NavMap/A" to="Navigation/NavController" method="destination_selected"]
[connection signal="selected" from="Navigation/NavMap/B" to="Navigation/NavController" method="destination_selected"]
[connection signal="selected" from="Navigation/NavMap/C" to="Navigation/NavController" method="destination_selected"]
[connection signal="selected" from="Navigation/NavMap/D" to="Navigation/NavController" method="destination_selected"]
[connection signal="selected" from="Navigation/NavMap/Combat" to="Navigation/NavController" method="destination_selected"]
